--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
+:root {
+  --navy: #031884;
+}
+
 body {
   margin: 0;
   font-family: "Rubik", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
