--- a/frontend/src/components/styles/Search.css
+++ b/frontend/src/components/styles/Search.css
@@ -21,3 +21,13 @@ button.search-filters{
     background: lightgrey;
     border-radius: 2px;
 }
+
+@keyframes enlarge {
+    from{
+
+    }
+
+    to{
+        width: inherit;
+    }
+}
