--- a/frontend/src/components/styles/Search.css
+++ b/frontend/src/components/styles/Search.css
@@ -3,6 +3,7 @@
     width: fit-content;
     margin: 10px;
     padding: 10px;
+    margin-left: 40%;
     border-radius: 10%/50%;
 }
 
@@ -20,6 +21,13 @@ button.search-filters{
     height: fit-content;
     background: lightgrey;
     border-radius: 2px;
+}
+
+.search-results {
+    height:max-content;
+    white-space: pre-wrap;
+    text-align: left;
+    padding-left: 40%;
 }
 
 @keyframes enlarge {
