--- a/frontend/src/components/styles/CamPreview.css
+++ b/frontend/src/components/styles/CamPreview.css
@@ -4,8 +4,8 @@
     margin: auto;
     margin-top: 10px;
     padding: 0;
-    border: 2px solid black;
-    border-radius: 1px;
+    border: 5px solid inset;
+    border-radius: 10px;
 }
 
 #outside-wrap {
