No camera fixes, works with landscape orientation, will look for solutions

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,11 @@
   min-height: 2em;
 }
 
+::-webkit-resizer {
+  background: url(../public/resize.png) no-repeat scroll 0px 0px;
+  background-size: 15px;
+}
+
 .text-handler>button {
   display: block;
   margin: auto;
