--- a/frontend/src/components/styles/CamPreview.css
+++ b/frontend/src/components/styles/CamPreview.css
@@ -4,7 +4,7 @@
     margin: auto;
     margin-top: 10px;
     padding: 0;
-    border: 5px solid inset;
+    border: 5px none inset;
     border-radius: 10px;
 }
 
@@ -30,4 +30,13 @@
 #input-overlay {
     width: 100%; height:100%; 
     position:absolute; top:0px; left:0px;
+}
+
+@media screen and (orientation: portrait) {
+
+    .webcam-component {
+        width: fit-content;
+        height: fit-content;
+    }
+    
 }
