--- a/frontend/src/components/styles/CamPreview.css
+++ b/frontend/src/components/styles/CamPreview.css
@@ -1,11 +1,11 @@
 .webcam-component {
-    width: 360px;
-    height: 464px;
+    width: fit-content;
+    height: fit-content;
     margin: auto;
     margin-top: 10px;
     padding: 0;
-    border: 5px none inset;
     border-radius: 10px;
+    overflow: hidden;
 }
 
 #outside-wrap {
@@ -30,13 +30,4 @@
 #input-overlay {
     width: 100%; height:100%; 
     position:absolute; top:0px; left:0px;
-}
-
-@media screen and (orientation: portrait) {
-
-    .webcam-component {
-        width: fit-content;
-        height: fit-content;
-    }
-    
 }
